# DesignPattern

./: README.md  tool.sh
01_SimpleFactoryMode/: CMakeLists.txt  Readme.md
01_SimpleFactoryMode/inc/: Factory.h  Product.h
01_SimpleFactoryMode/src/: CMakeLists.txt  Factory.cpp  Product.cpp  main.cpp
02_FactoryMode/: CMakeLists.txt  README.md
02_FactoryMode/inc/: Factory.h  Product.h
02_FactoryMode/src/: Factory.cpp  Product.cpp  main.cpp
TemplateMethod/: CTemplateMethod.h  README.md  main.cpp
